--- a/packages/react-ui/src/Label/Label.mdx
+++ b/packages/react-ui/src/Label/Label.mdx
@@ -1,9 +1,9 @@
 ## Label
 
-Label is the primary component. It is used as tag for input fields as well as headings for components like dialog, accordion etc.
+Label is the primary component. It is used as title/description tag for input fields as well as headings for components like dialog, accordion etc.
 
-- [Primary](#primary)
+- [Index](#irimary)
 
-### Primary
+### Index
 
-<Story id="label--primary" />
+<Story id="label--index" />
