--- a/packages/react-ui/src/Label/Label.mdx
+++ b/packages/react-ui/src/Label/Label.mdx
@@ -2,7 +2,7 @@
 
 Label is the primary component. It is used as title/description tag for input fields as well as headings for components like dialog, accordion etc.
 
-- [Index](#irimary)
+- [Index](#index)
 
 ### Index
 
